--- a/relatorio/Netuno/Relatorio.tex
+++ b/relatorio/Netuno/Relatorio.tex
@@ -611,7 +611,7 @@ Date & Filter & $\Delta H$ & $\Delta B$ & Nimg & Nstars & RA no corr & DEC no co
 
 Finally, from the offsets in the sense "position minus ephemeris" identified it was made statistics night by night to eliminate discrepant positions with a sigma-clip procedure where offsets (modulus) larger than 80 mas or 2.5-sigma discrepant from the mean offset were removed.% This procedure was applied for each set of observations (short exposures and long exposures) separately.
 
-Fig \ref{Fig:netuno-media} shows the mean offsets of each night and respective discrepancy (error bars) for Neptune in RA and DEC, respectively.
+Fig \ref{Fig:netuno-media} shows the mean ephemeris offsets of each night and respective discrepancy (error bars) for Neptune in RA and DEC, respectively.
 
 %Fig \ref{Fig:triton-netuno-mean} shows the difference in the mean offsets night by night for all matched nights and not eliminated by the sigma-clip procedure in the sense Triton - Neptune. The error bars are the mean value of the dispersions in the night for each satellite.
 
@@ -620,7 +620,7 @@ Fig \ref{Fig:netuno-media} shows the mean offsets of each night and respective d
 
 %It seems that there are long term systematic errors in the orbit of Neptune, and in the orbit of Triton around Neptune, but it is too soon to state that with confidence. We must still further refine the positions.
 %We still plan to do the following:
-Fig. \ref{Fig:triton-netuno-anom} shows the difference between the offsets of Triton and Neptune over True Anomaly. %Figs. \ref{Fig:triton-netuno-1992}- \ref{Fig:triton-netuno-2013} shows the same divided by an interval of 3 years.
+ %Figs. \ref{Fig:triton-netuno-1992}- \ref{Fig:triton-netuno-2013} shows the same divided by an interval of 3 years.
 
 %\begin{itemize}
 %\item Test the PSF for Neptune to identify the best way to reduce all images.
@@ -664,6 +664,7 @@ Fig. \ref{Fig:triton-netuno-anom} shows the difference between the offsets of Tr
 %\label{Fig:triton-netuno-mean}
 %\end{figure}
 
+Fig. \ref{Fig:triton-netuno-anom} shows the difference between the ephemeris offsets of Triton and Neptune over True Anomaly, so that in fact we get the "observed minus ephemeris" offsets of the relative positions of Triton with respect to Neptune.
 
 \begin{figure}[H]
 \includegraphics[width=14.0cm]{Anom_TN.png} 
