--- a/tabela.tex
+++ b/tabela.tex
@@ -66,133 +66,151 @@ Sinope DE435 & 41 & 264$\pm$141 & -52$\pm$ 68 & 169 & -50$\pm$206 & -34$\pm$ 80 
 \par \end{centering}
 \end{table*}
 
-
-\begin{figure*}
+\begin{table*}
 \begin{centering}
-\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Himalia_RA}}
-\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Himalia_RA}}
-\end{centering}
-\end{figure*}
+\begin{tabular}{lccc}
+\hline  \hline
+ & \multicolumn{2}{c}{Mean Errors} & UCAC4 \tabularnewline
+Telescope  & $\sigma_\alpha$ & $\sigma_\delta$ & stars\tabularnewline
+ & mas & mas & \tabularnewline
+\hline
+PE (OPD) & 52 & 49 & 17 \\
+B\& C (OPD) & 56 & 55 & 36 \\
+Zeiss (OPD) & 58 & 57 & 82 \\
+OHP & 50 & 49 & 44 \\
+ESO & 28 & 28 & 531 \\
+\hline
+\end{tabular}
+\par \end{centering}
+\end{table*}
 
-\begin{figure*}
-\begin{centering}
-\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Himalia_DEC}}
-\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Himalia_DEC}}
-\end{centering}
-\end{figure*}
 
-\begin{figure*}
-\begin{centering}
-\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Elara_RA}}
-\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Elara_RA}}
-\end{centering}
-\end{figure*}
-
-\begin{figure*}
-\begin{centering}
-\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Elara_DEC}}
-\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Elara_DEC}}
-\end{centering}
-\end{figure*}
-
-\begin{figure*}
-\begin{centering}
-\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Leda_RA}}
-\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Leda_RA}}
-\end{centering}
-\end{figure*}
-
-\begin{figure*}
-\begin{centering}
-\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Leda_DEC}}
-\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Leda_DEC}}
-\end{centering}
-\end{figure*}
-
-\begin{figure*}
-\begin{centering}
-\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Lysithea_RA}}
-\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Lysithea_RA}}
-\end{centering}
-\end{figure*}
-
-\begin{figure*}
-\begin{centering}
-\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Lysithea_DEC}}
-\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Lysithea_DEC}}
-\end{centering}
-\end{figure*}
-
-\begin{figure*}
-\begin{centering}
-\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Ananke_RA}}
-\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Ananke_RA}}
-\end{centering}
-\end{figure*}
-
-\begin{figure*}
-\begin{centering}
-\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Ananke_DEC}}
-\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Ananke_DEC}}
-\end{centering}
-\end{figure*}
-
-\begin{figure*}
-\begin{centering}
-\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Carme_RA}}
-\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Carme_RA}}
-\end{centering}
-\end{figure*}
-
-\begin{figure*}
-\begin{centering}
-\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Carme_DEC}}
-\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Carme_DEC}}
-\end{centering}
-\end{figure*}
-
-\begin{figure*}
-\begin{centering}
-\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Pasiphae_RA}}
-\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Pasiphae_RA}}
-\end{centering}
-\end{figure*}
-
-\begin{figure*}
-\begin{centering}
-\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Pasiphae_DEC}}
-\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Pasiphae_DEC}}
-\end{centering}
-\end{figure*}
-
-\begin{figure*}
-\begin{centering}
-\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Sinope_RA}}
-\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Sinope_RA}}
-\end{centering}
-\end{figure*}
-
-\begin{figure*}
-\begin{centering}
-\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Sinope_DEC}}
-\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Sinope_DEC}}
-\end{centering}
-\end{figure*}
-
-\begin{figure*}
-\begin{centering}
-\subfigure{\includegraphics[width=10.0cm]{/home/altair/Documentos/teste/observation/DE435_RA}}
-\subfigure{\includegraphics[width=10.0cm]{/home/altair/Documentos/teste/observation/DE435_DEC}}
-\end{centering}
-\end{figure*}
-
-\begin{figure*}
-\begin{centering}
-\subfigure{\includegraphics[width=10.0cm]{/home/altair/Documentos/teste/observation/DE435_sat_RA}}
-\subfigure{\includegraphics[width=10.0cm]{/home/altair/Documentos/teste/observation/DE435_sat_DEC}}
-\end{centering}
-\end{figure*}
-
+%\begin{figure*}
+%\begin{centering}
+%\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Himalia_RA}}
+%\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Himalia_RA}}
+%\end{centering}
+%\end{figure*}
+%
+%\begin{figure*}
+%\begin{centering}
+%\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Himalia_DEC}}
+%\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Himalia_DEC}}
+%\end{centering}
+%\end{figure*}
+%
+%\begin{figure*}
+%\begin{centering}
+%\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Elara_RA}}
+%\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Elara_RA}}
+%\end{centering}
+%\end{figure*}
+%
+%\begin{figure*}
+%\begin{centering}
+%\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Elara_DEC}}
+%\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Elara_DEC}}
+%\end{centering}
+%\end{figure*}
+%
+%\begin{figure*}
+%\begin{centering}
+%\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Leda_RA}}
+%\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Leda_RA}}
+%\end{centering}
+%\end{figure*}
+%
+%\begin{figure*}
+%\begin{centering}
+%\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Leda_DEC}}
+%\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Leda_DEC}}
+%\end{centering}
+%\end{figure*}
+%
+%\begin{figure*}
+%\begin{centering}
+%\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Lysithea_RA}}
+%\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Lysithea_RA}}
+%\end{centering}
+%\end{figure*}
+%
+%\begin{figure*}
+%\begin{centering}
+%\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Lysithea_DEC}}
+%\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Lysithea_DEC}}
+%\end{centering}
+%\end{figure*}
+%
+%\begin{figure*}
+%\begin{centering}
+%\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Ananke_RA}}
+%\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Ananke_RA}}
+%\end{centering}
+%\end{figure*}
+%
+%\begin{figure*}
+%\begin{centering}
+%\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Ananke_DEC}}
+%\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Ananke_DEC}}
+%\end{centering}
+%\end{figure*}
+%
+%\begin{figure*}
+%\begin{centering}
+%\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Carme_RA}}
+%\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Carme_RA}}
+%\end{centering}
+%\end{figure*}
+%
+%\begin{figure*}
+%\begin{centering}
+%\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Carme_DEC}}
+%\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Carme_DEC}}
+%\end{centering}
+%\end{figure*}
+%
+%\begin{figure*}
+%\begin{centering}
+%\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Pasiphae_RA}}
+%\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Pasiphae_RA}}
+%\end{centering}
+%\end{figure*}
+%
+%\begin{figure*}
+%\begin{centering}
+%\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Pasiphae_DEC}}
+%\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Pasiphae_DEC}}
+%\end{centering}
+%\end{figure*}
+%
+%\begin{figure*}
+%\begin{centering}
+%\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Sinope_RA}}
+%\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Sinope_RA}}
+%\end{centering}
+%\end{figure*}
+%
+%\begin{figure*}
+%\begin{centering}
+%\subfigure{\includegraphics[width=9.5cm]{Irregulares/figures/Sinope_DEC}}
+%\subfigure{\includegraphics[width=9.5cm]{/home/altair/Documentos/softwares/de435/Sinope_DEC}}
+%\end{centering}
+%\end{figure*}
+%
+%\begin{figure*}
+%\begin{centering}
+%\subfigure{\includegraphics[width=10.0cm]{/home/altair/Documentos/teste/observation/DE435_RA}}
+%\subfigure{\includegraphics[width=10.0cm]{/home/altair/Documentos/teste/observation/DE435_DEC}}
+%\end{centering}
+%\end{figure*}
+%
+%\begin{figure*}
+%\begin{centering}
+%\subfigure{\includegraphics[width=10.0cm]{/home/altair/Documentos/teste/observation/DE435_sat_RA}}
+%\subfigure{\includegraphics[width=10.0cm]{/home/altair/Documentos/teste/observation/DE435_sat_DEC}}
+%\end{centering}
+%\end{figure*}
+%
 \end{landscape}
-
+%
 \end{document}
