--- a/relatorio/OV-2016/Referencias.bib
+++ b/relatorio/OV-2016/Referencias.bib
@@ -208,7 +208,7 @@ DOI={10.1016/j.icarus.2003.07.005},
 number={1},
 journal={Icarus},
 publisher={Elsevier BV},
-author={Grav, Tommy and Holman, Matthew J. and Gladman, Brett J. and Aksnes, Kaare},
+author={Grav, T. and Holman, M. J. and Gladman, B. J. and Aksnes, K.},
 year={2003},
 month={Nov},
 pages={33–45}
@@ -236,7 +236,7 @@ DOI={10.1086/375461},
 number={1},
 journal={AJ},
 publisher={IOP Publishing},
-author={Nesvorný, David and Alvarellos, Jose L. A. and Dones, Luke and Levison, Harold F.},
+author={Nesvorný, D. and Alvarellos, J. L. A. and Dones, L. and Levison, H. F.},
 year={2003},
 month={Jul},
 pages={398–429}
@@ -250,7 +250,7 @@ DOI={10.1086/382099},
 number={3},
 journal={AJ},
 publisher={IOP Publishing},
-author={Nesvorný, David and Beaugé, Cristian and Dones, Luke},
+author={Nesvorný, D. and Beaugé, C. and Dones, L.},
 year={2004},
 month={Mar},
 pages={1768–1783}
@@ -628,6 +628,19 @@ month={Dec},
 pages={A37}
 }
 
+@article{Desmars2013,
+title={Phoebe’s orbit from ground-based and space-based observations},
+volume={553},
+url={http://dx.doi.org/10.1051/0004-6361/201321114},
+DOI={10.1051/0004-6361/201321114},
+journal={Astronomy \& Astrophysics},
+publisher={EDP Sciences},
+author={Desmars, J. and Li, S. N. and Tajeddine, R. and Peng, Q. Y. and Tang, Z. H.},
+year={2013},
+month={Apr},
+pages={A36}
+}
+
 @Article{Drummond2014,
 title={\href{http://dx.doi.org/10.1016/j.icarus.2014.03.038}{Dwarf planet Ceres: Ellipsoid dimensions and rotational pole from Keck and VLT adaptive optics images}},
 volume={236},
@@ -703,16 +716,17 @@ pages={220–225}
 }
 
 @Article{GomesJunior2015-Ceres,
-author = {Gomes-Júnior, A. R. and Giacchini, B. L. and Braga-Ribas, F. and others}, 
-title = {\href{http://mnras.oxfordjournals.org/content/451/3/2295.abstract}{Results of two multichord stellar occultations by dwarf planet (1) Ceres}},
-volume = {451}, 
-number = {3}, 
-pages = {2295-2302}, 
-year = {2015}, 
-doi = {10.1093/mnras/stv1081}, 
-url = {http://mnras.oxfordjournals.org/content/451/3/2295.abstract}, 
-eprint = {http://mnras.oxfordjournals.org/content/451/3/2295.full.pdf+html}, 
-journal = {Monthly Notices of the Royal Astronomical Society} 
+title={Results of two multichord stellar occultations by dwarf planet (1) Ceres},
+volume={451},
+url={http://dx.doi.org/10.1093/mnras/stv1081},
+DOI={10.1093/mnras/stv1081},
+number={3},
+journal={Monthly Notices of the Royal Astronomical Society},
+publisher={Oxford University Press (OUP)},
+author={Gomes-Junior, A. R. and Giacchini, B. L. and Braga-Ribas, F. and others},
+year={2015},
+month={Jun},
+pages={2295–2302}
 }
 
 @Article{GomesJunior2015-Irregular,
@@ -722,7 +736,7 @@ url={http://dx.doi.org/10.1051/0004-6361/201526273},
 DOI={10.1051/0004-6361/201526273},
 journal={Astronomy \& Astrophysics},
 publisher={EDP Sciences},
-author={Gomes-Júnior, A. R. and Assafin, M. and Vieira-Martins, R. and Arlot, J.-E. and Camargo, J. I. B. and Braga-Ribas, F. and da Silva Neto, D. N. and Andrei, A. H. and Dias-Oliveira, A. and Morgado, B. E. and et al.},
+author={Gomes-Júnior, A. R. and Assafin, M. and Vieira-Martins, R. and others},
 year={2015},
 month={Aug},
 pages={A76}
@@ -736,22 +750,23 @@ DOI={10.1088/0004-637x/811/1/53},
 number={1},
 journal={ApJ},
 publisher={IOP Publishing},
-author={Dias-Oliveira, A. and Sicardy, B. and Lellouch, E. and Vieira-Martins, R. and Assafin, M. and Camargo, J. I. B. and Braga-Ribas, F. and Gomes-Júnior, A. R. and Benedetti-Rossi, G. and Colas, F. and et al.},
+author={Dias-Oliveira, A. and Sicardy, B. and Lellouch, E. and others},
 year={2015},
 month={Sep},
 pages={53}
 }
 
 @article{Desmars2015,
-title={\href{http://dx.doi.org/10.1051/0004-6361/201526498}{Orbit determination of trans-Neptunian objects and Centaurs for the prediction of stellar occultations}},
+title={Orbit determination of trans-Neptunian objects and Centaurs for the prediction of stellar occultations},
+volume={584},
 url={http://dx.doi.org/10.1051/0004-6361/201526498},
 DOI={10.1051/0004-6361/201526498},
 journal={Astronomy \& Astrophysics},
 publisher={EDP Sciences},
-author={Desmars, J. and Camargo, J.I.B. and Braga-Ribas, F. and Vieira-Martins, R. and Assafin, M. and Vachier, F. and Colas, F. and Ortiz, J. L. and Duffard, R. and Morales, N. and et al.},
+author={Desmars, J. and Camargo, J. I. B. and Braga-Ribas, F. and others},
 year={2015},
-month={Oct},
-note={accepted}
+month={Nov},
+pages={A96}
 }
 
 @article{Nimmo2015,
@@ -787,7 +802,7 @@ url={http://dx.doi.org/10.1051/0004-6361/201526385},
 DOI={10.1051/0004-6361/201526385},
 journal={Astronomy \& Astrophysics},
 publisher={EDP Sciences},
-author={Camargo, J. I. B. and Magalhães, F. P. and Vieira-Martins, R. and Assafin, M. and Braga-Ribas, F. and Dias-Oliveira, A. and Benedetti-Rossi, G. and Gomes-Júnior, A. R. and Andrei, A. H. and da Silva Neto, D. N.},
+author={Camargo, J. I. B. and Magalhães, F. P. and Vieira-Martins, R. and others},
 year={2015},
 month={Sep},
 pages={A8}
@@ -801,8 +816,147 @@ DOI={10.1126/science.aad1815},
 number={6258},
 journal={Science},
 publisher={American Association for the Advancement of Science (AAAS)},
-author={Stern, S. A. and Bagenal, F. and Ennico, K. and Gladstone, G. R. and Grundy, W. M. and McKinnon, W. B. and Moore, J. M. and Olkin, C. B. and Spencer, J. R. and Weaver, H. A. and et al.},
+author={Stern, S. A. and Bagenal, F. and Ennico, K. and others},
 year={2015},
 month={Oct},
 pages={aad1815–aad1815}
 }
+
+@article{Peng2015,
+title={Precise CCD positions of Phoebe in 2011-2014},
+volume={449},
+url={http://dx.doi.org/10.1093/mnras/stv469},
+DOI={10.1093/mnras/stv469},
+number={3},
+journal={Monthly Notices of the Royal Astronomical Society},
+publisher={Oxford University Press (OUP)},
+author={Peng, Q. Y. and Wang, N. and Vienne, A. and others}, year={2015},
+month={Apr},
+pages={2638–2642}
+}
+
+@article{Emelyanov2015,
+title={Analytical theory of motion and new ephemeris of Triton from observations},
+volume={454},
+url={http://dx.doi.org/10.1093/mnras/stv2116},
+DOI={10.1093/mnras/stv2116},
+number={2},
+journal={Mon. Not. R. Astron. Soc.},
+publisher={Oxford University Press (OUP)},
+author={Emelyanov, N. V. and Samorodov, M. Yu.},
+year={2015},
+month={Oct},
+pages={2205–2215}
+}
+
+@article{Nathues2015,
+title={Sublimation in bright spots on (1) Ceres},
+volume={528},
+url={http://dx.doi.org/10.1038/nature15754},
+DOI={10.1038/nature15754},
+number={7581},
+journal={Nature},
+publisher={Nature Publishing Group},
+author={Nathues, A. and Hoffmann, M. and Schaefer, M. and others.},
+year={2015},
+month={Dec},
+pages={237–240}
+}
+
+@article{DeSanctis2015,
+title={Ammoniated phyllosilicates with a likely outer Solar System origin on (1) Ceres},
+volume={528},
+url={http://dx.doi.org/10.1038/nature16172},
+DOI={10.1038/nature16172},
+number={7581},
+journal={Nature},
+publisher={Nature Publishing Group},
+author={De Sanctis, M. C. and Ammannito, E. and Raponi, A. and others},
+year={2015},
+month={Dec},
+pages={241–244}
+}
+
+@article{Brown2016,
+title={Gaia Data Release 1. Summary of the astrometric, photometric, and survey properties},
+url={http://dx.doi.org/10.1051/0004-6361/201629512},
+DOI={10.1051/0004-6361/201629512},
+journal={Astronomy \& Astrophysics},
+publisher={EDP Sciences},
+author={Brown, A. G. A. and Vallenari, A. and Prusti, T.},
+year={2016},
+month={Sep}
+}
+
+@article{Sicardy2016,
+title={PLUTO’S ATMOSPHERE FROM THE 2015 JUNE 29 GROUND-BASED STELLAR OCCULTATION AT THE TIME OF THE NEW HORIZONS FLYBY},
+volume={819},
+url={http://dx.doi.org/10.3847/2041-8205/819/2/L38},
+DOI={10.3847/2041-8205/819/2/l38},
+number={2},
+journal={ApJ},
+publisher={American Astronomical Society},
+author={Sicardy, B. and Talbot, J. and Meza, E. and others},
+year={2016},
+month={Mar},
+pages={L38}
+}
+
+@article{Russell2016,
+title={Dawn arrives at Ceres: Exploration of a small, volatile-rich world},
+volume={353},
+url={http://dx.doi.org/10.1126/science.aaf4219},
+DOI={10.1126/science.aaf4219},
+number={6303},
+journal={Science},
+publisher={American Association for the Advancement of Science (AAAS)},
+author={Russell, C. T. and Raymond, C. A. and Ammannito, E. and others},
+year={2016},
+month={Sep},
+pages={1008–1010}
+}
+
+@misc{GomesJunior2016,
+title={New orbits of irregular satellites designed for the predictions of stellar occultations up to 2020, based on thousands of new observations},
+volume={462},
+url={http://dx.doi.org/10.1093/mnras/stw1738},
+DOI={10.1093/mnras/stw1738},
+number={2},
+journal={Mon. Not. R. Astron. Soc.},
+publisher={Oxford University Press (OUP)},
+author={Gomes-Júnior, A. R. and Assafin, M. and Beauvalet, L. and others},
+year={2016},
+month={Jul},
+pages={1351–1358}
+}
+
+@article{Morgado2016,
+title={Astrometry of mutual approximations between natural satellites. Application to the Galilean moons},
+volume={460},
+url={http://dx.doi.org/10.1093/mnras/stw1244},
+DOI={10.1093/mnras/stw1244},
+number={4},
+journal={Mon. Not. R. Astron. Soc.},
+publisher={Oxford University Press (OUP)},
+author={Morgado, B. and Assafin, M. and Vieira-Martins, R. and others},
+year={2016},
+month={May},
+pages={4086–4097}
+}
+
+@Article{Alex2016,
+author = {Dias-Oliveira, A. and Sicardy, B. and Ortiz, J. L. and others},
+title = {First detection of a chasm on a Trans-Neptunian Object using multi-chord stellar occultations: The case of (208996) 2003 AZ84.},
+journal = {Astrophysical Journal},
+year = {2016},
+note = {submetido}
+}
+
+@Article{Rossi2016,
+author = {Benedetti-Rossi, G. and Sicardy, B and Buie, M. W. and others},
+title = {Results from the 2014 November 15th multi-chord stellar occultation by the TNO 2007 UK126},
+journal = {Asronomical Journal},
+year = {2016},
+note = {aceito}
+}
+
