--- a/relatorio/Netuno/references.bib
+++ b/relatorio/Netuno/references.bib
@@ -39,3 +39,17 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2016arXiv160400518S},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@article{Emelyanov2015,
+title={Analytical theory of motion and new ephemeris of Triton from observations},
+volume={454},
+url={http://dx.doi.org/10.1093/mnras/stv2116},
+DOI={10.1093/mnras/stv2116},
+number={2},
+journal={Mon. Not. R. Astron. Soc.},
+publisher={Oxford University Press (OUP)},
+author={Emelyanov, N. V. and Samorodov, M. Yu.},
+year={2015},
+month={Oct},
+pages={2205–2215}
+}
